fix long code command overflow

--- a/react-app/src/components/Question/GetSingleQuestion/singleQuestion.css
+++ b/react-app/src/components/Question/GetSingleQuestion/singleQuestion.css
@@ -134,7 +134,10 @@
 pre {
   background: rgb(240, 240, 240);
   padding:10px;
+  overflow: auto;
 }
+
+
 
 .has-two-items {
   display: flex;
